Update sv.po to the latest version from the Translation Project

--- a/po/sv.po
+++ b/po/sv.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.8-pre1\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2015-08-26 23:17+1000\n"
-"PO-Revision-Date: 2015-08-27 10:05+0200\n"
+"PO-Revision-Date: 2015-08-30 23:19+0200\n"
 "Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -66,7 +66,7 @@ msgstr ""
 "Star Traders (%s) %s\n"
 "Copyright © %s, John Zaitseff.\n"
 "\n"
-"Star Traders är ett enkelt spel om interstellär handel, där spelets målet är\n"
+"Star Traders är ett enkelt spel om interstellär handel, där spelets mål är\n"
 "att bilda företag, köpa och sälja aktier, låna och betala tillbaka pengar för\n"
 "att bli den rikaste spelaren (vinnaren).\n"
 "\n"
