Update the date: we release today!

--- a/NEWS
+++ b/NEWS
@@ -15,8 +15,8 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
-Version 7.8 (not yet released)
-------------------------------
+Version 7.8 (10th September, 2015)
+----------------------------------
 
 Changed the name of the seventh company from "Gemeni Inc" to "Gemini Inc":
 a spelling mistake  that has been present  since 1990!   Special thanks to
