Mention the updated Danish translation in NEWS

--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ at http://www.zap.org.au/services/svn/.
 Version 7.9 (not yet released)
 ------------------------------
 
-(Nothing yet...)
+Updated the Danish translation, with thanks to Joe Hansen.
 
 
 Version 7.8 (10th September, 2015)
