--- a/po/sv.po
+++ b/po/sv.po
@@ -1,7 +1,7 @@
 # *************************************************************************
 # *                                                                       *
 # *                 Swedish Translations for Star Traders                 *
-# *                   Copyright (C) 2015, John Zaitseff                   *
+# *                 Copyright (C) 2015-16, John Zaitseff                  *
 # *                                                                       *
 # *************************************************************************
 #
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.9\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2015-08-26 21:10+1000\n"
-"PO-Revision-Date: 2015-09-30 09:45+1000\n"
+"PO-Revision-Date: 2016-01-05 09:18+1100\n"
 "Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
