--- a/NEWS
+++ b/NEWS
@@ -15,8 +15,8 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
-Version 7.9 (not yet released)
-------------------------------
+Version 7.9 (5th January, 2016)
+-------------------------------
 
 Updated the Danish translation, with thanks to Joe Hansen.
 
