Start preparing for the next version: bump to v7.10

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.10 (not yet released)
+-------------------------------
+
+(No changes yet.)
+
+
 Version 7.9 (5th January, 2016)
 -------------------------------
 
