--- a/NEWS
+++ b/NEWS
@@ -18,7 +18,7 @@ at http://www.zap.org.au/services/svn/.
 Version 7.10 (not yet released)
 -------------------------------
 
-(No changes yet.)
+Added the Serbian translation, with thanks to Мирослав Николић.
 
 
 Version 7.9 (5th January, 2016)
