--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,9 @@ at http://www.zap.org.au/services/svn/.
 Version 7.10 (not yet released)
 -------------------------------
 
+Added a data directory that will contain a desktop file and appropriate
+icons.
+
 Downgraded GNU Gettext to version 0.18.3, as the current Gnulib macros are
 from that version.
 
